1. Created a separate helper class because of too much methods 2. Looping through children as well, because some of them are not actually datasource items.

--- a/src/Sitecore.Support.163353/Sitecore.Support.163353.csproj
+++ b/src/Sitecore.Support.163353/Sitecore.Support.163353.csproj
@@ -64,6 +64,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ExperienceEditor\Speak\Ribbon\Requests\LockItem\ToggleLockRequest.cs" />
+    <Compile Include="Helpers\RelatedItemHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
